# betterLogs4Python

./: Demo.py  LICENSE  README.md  clean.bash  setup.cfg
src/betterLogs4Python/: __init__.py  betterLogs4Python.py
