[metadata]
name = betterLogs4Python
version = 0.1.6
author = Jonas Mayer
author_email = jonas.mayer.dev@gmail.com
description = As the name says, it's a little helper for logging more comfortably in python 3 (for now only python3 support) to file and console!
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/JonasMayerDev/betterLogs4Python
project_urls =
    Bug Tracker = https://github.com/JonasMayerDev/betterLogs4Python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src
